Add NSPhotoLibraryAddUsageDescription to Info.plist
As I understood it, we should not be needing this since we have
NSPhotoLibraryUsageDescription already, but we're getting a number of
crashes for privacy violations with this as the reason:

  Termination Reason: TCC, This app has crashed because it attempted to
  access privacy-sensitive data without a usage description. The app's
  Info.plist must contain an NSPhotoLibraryAddUsageDescription key with a
  string value explaining to the user how the app uses this data.

Fixes: #8795

--- a/WordPress/Wordpress-Alpha-Info.plist
+++ b/WordPress/Wordpress-Alpha-Info.plist
@@ -95,6 +95,8 @@
 	<string>For your videos to have sound on them.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>To add photos or videos to your posts.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>To add photos or videos to your posts.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Noticons.ttf</string>
