--- a/config/Version.public.xcconfig
+++ b/config/Version.public.xcconfig
@@ -1,4 +1,4 @@
-VERSION_SHORT="9.9"
+VERSION_SHORT=9.9
 
-// Public long version example: VERSION_LONG="9.9.0.0"
-VERSION_LONG="9.9.0.0"
+// Public long version example: VERSION_LONG=9.9.0.0
+VERSION_LONG=9.9.0.0
