Update homebrew before installing other tools
Fixes a bintray issue

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,6 +200,7 @@ jobs:
       - run:
           name: Install other tools
           command: |
+            brew update # Update homebrew to temporarily fix a bintray issue
             brew install imagemagick
             brew install ghostscript
             curl -sL https://sentry.io/get-cli/ | bash
@@ -251,6 +252,7 @@ jobs:
       - run:
           name: Install other tools
           command: |
+            brew update # Update homebrew to temporarily fix a bintray issue
             brew install imagemagick
             brew install ghostscript
             curl -sL https://sentry.io/get-cli/ | bash
@@ -287,6 +289,7 @@ jobs:
       - run:
           name: Install other tools
           command: |
+            brew update # Update homebrew to temporarily fix a bintray issue
             brew install imagemagick
             brew install ghostscript
             curl -sL https://sentry.io/get-cli/ | bash
@@ -316,6 +319,7 @@ jobs:
       - run:
           name: Install other tools
           command: |
+            brew update # Update homebrew to temporarily fix a bintray issue
             brew install imagemagick
             brew install ghostscript
             curl -sL https://sentry.io/get-cli/ | bash
