Fix Google Login

--- a/WordPress/Info.plist
+++ b/WordPress/Info.plist
@@ -447,7 +447,9 @@
 			<key>CFBundleURLName</key>
 			<string>GoogleSignIn</string>
 			<key>CFBundleURLSchemes</key>
-			<array/>
+			<array>
+				<string>com.googleusercontent.apps.108380595987-ujhrhknecrqli756i72gkcs4aaia6nhb</string>
+			</array>
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
