--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,6 +1,3 @@
-# By default, run on macOS agents
-agents:
-  os: "macOS"
 
 # This is the default pipeline – it will build and test the app
 steps:
@@ -22,8 +19,6 @@ steps:
       bundle exec fastlane build_for_testing
       echo "--- 🗜 Zip Build Products"
       tar -cf build-products.tar DerivedData/Build/Products/
-    agents:
-      os: "macOS"
     artifact_paths:
       - build-products.tar
 
@@ -37,8 +32,17 @@ steps:
       bundle install
       bundle exec fastlane test_without_building name:WordPressUnitTests try_count:3
     depends_on: "build"
+
+  #################
+  # Lint Translations
+  #################
+  - label: "🧹 Lint Translations"
+    command: "gplint /workdir/WordPress/Resources/AppStoreStrings.po"
+    plugins:
+      - docker#v3.8.0:
+          image: "jkmassel/glotpress-linter:latest"
     agents:
-      os: "macOS"
+      queue: "default"
 
   #################
   # UI Tests
