Build for Jetpack when doing beta/release builds

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -217,6 +217,7 @@ jobs:
                 name: Build
                 command: |
                   bundle exec fastlane build_and_upload_beta_release skip_confirm:true create_gh_release:true
+                  bundle exec fastlane build_and_upload_jetpack_for_app_store
                 no_output_timeout: 60m
       - when:
           condition: << pipeline.parameters.release_build >>
@@ -225,6 +226,7 @@ jobs:
                 name: Build
                 command: |
                   bundle exec fastlane build_and_upload_stable_release skip_confirm:true create_gh_release:true
+                  bundle exec fastlane build_and_upload_jetpack_for_app_store
                 no_output_timeout: 60m
       - slack/status:
           include_job_number_field: false
