--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -53,6 +53,10 @@ steps:
       buildkite-agent artifact download build-products.tar .
       tar -xf build-products.tar
 
+      echo "--- :wrench: Fixing VM"
+      brew install openjdk@11
+      sudo ln -sfn /usr/local/opt/openjdk@11/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk-11.jdk
+
       echo "--- :rubygems: Setting up Gems"
       bundle install
 
@@ -72,6 +76,10 @@ steps:
       echo "--- 📦 Downloading Build Artifacts"
       buildkite-agent artifact download build-products.tar .
       tar -xf build-products.tar
+
+      echo "--- :wrench: Fixing VM"
+      brew install openjdk@11
+      sudo ln -sfn /usr/local/opt/openjdk@11/libexec/openjdk.jdk /Library/Java/JavaVirtualMachines/openjdk-11.jdk
 
       echo "--- :rubygems: Setting up Gems"
       bundle install
