WIP: implementing local weekly roundup.

--- a/WordPress/Info.plist
+++ b/WordPress/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>BGTaskSchedulerPermittedIdentifiers</key>
+	<array>
+		<string>org.wordpress.bgtask.weeklyroundup</string>
+	</array>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -484,10 +488,21 @@
 	<string>WordPress would like to add your location to posts on sites where you have enabled geotagging.</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Enable microphone access to record sound in your videos.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>To add photos or videos to your posts.</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>To add photos or videos to your posts.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>To add photos or videos to your posts.</string>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>org.wordpress.me</string>
+		<string>org.wordpress.me.appsettings</string>
+		<string>org.wordpress.me.notificationsettings</string>
+		<string>org.wordpress.me.support</string>
+		<string>org.wordpress.mysites</string>
+		<string>org.wordpress.mysites.details</string>
+		<string>org.wordpress.notifications</string>
+		<string>org.wordpress.reader</string>
+	</array>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Noticons.ttf</string>
@@ -503,6 +518,7 @@
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
+		<string>processing</string>
 		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
@@ -524,16 +540,5 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
-	<key>NSUserActivityTypes</key>
-	<array>
-		<string>org.wordpress.me</string>
-		<string>org.wordpress.me.appsettings</string>
-		<string>org.wordpress.me.notificationsettings</string>
-		<string>org.wordpress.me.support</string>
-		<string>org.wordpress.mysites</string>
-		<string>org.wordpress.mysites.details</string>
-		<string>org.wordpress.notifications</string>
-		<string>org.wordpress.reader</string>
-	</array>
 </dict>
 </plist>
