--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,7 +39,7 @@ commands:
               echo $PATH
             fi
 
-            chruby ruby-2.7.4
+            chruby ruby-$(cat .ruby-version)
             gem install bundler
 
             # Prevent fastlane from checking for updates, also removing the verbose fastlane changelog at the end of each invocation.
