Use more generic names for UI tests jobs in CI
This way, they won't get out of sync from the device the actually use as
we upgrade.

I think there's value in knowing they are on iPhone or iPad, but given
we don't run on multiple iPhone (or iPad) Simulators, knowing the exact
device is not necessary.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -304,7 +304,7 @@ workflows:
           requires: [ "Build Tests" ]
       # Always run UI tests on develop and release branches
       - UI Tests:
-          name: UI Tests (iPhone 11)
+          name: UI Tests (iPhone)
           <<: *iphone_test_device
           post-to-slack: true
           requires: [ "Build Tests" ]
@@ -315,7 +315,7 @@ workflows:
                 - /^release.*/
                 - /^gutenberg\/integrate_release_.*/
       - UI Tests:
-          name: UI Tests (iPad Air 4th generation)
+          name: UI Tests (iPad)
           <<: *ipad_test_device
           post-to-slack: true
           requires: [ "Build Tests" ]
@@ -338,11 +338,11 @@ workflows:
                 - /^release.*/
                 - /^gutenberg\/integrate_release_.*/
       - UI Tests:
-          name: UI Tests (iPhone 11)
+          name: UI Tests (iPhone)
           <<: *iphone_test_device
           requires: [ "Optional Tests" ]
       - UI Tests:
-          name: UI Tests (iPad Air 4th generation)
+          name: UI Tests (iPad)
           <<: *ipad_test_device
           requires: [ "Optional Tests" ]
   Installable Build:
